# cocoon-tpm

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml
.distro/: Makefile
.distro/.claude/: settings.local.json
.github/workflows/: rust.yml
cocoonfs-cli/src/: main.rs
crypto/: Cargo.toml
crypto/src/ecc/: gen_random_scalar.rs  key.rs
crypto/src/ecc/curve/: mod.rs
crypto/src/kdf/: mod.rs  tcg_tpm2_kdf_a.rs  tcg_tpm2_kdf_e.rs
crypto/src/pure_rust/ecc/curve/: mod.rs  weierstrass_arithmetic.rs
crypto/src/rng/: hash_drbg.rs
ossl-bare-sys/: Cargo.toml  README.md  build.rs
ossl-bare-sys-target-integration-svsm/: Cargo.toml  README.md  build.rs
ossl-bare-sys-target-integration-svsm/src/: lib.rs
ossl-bare-sys/src/: lib.rs
scripts/: check-signed-off.sh
storage/src/fs/cocoonfs/: auth_tree.rs  encryption_entities.rs  extents_layout.rs  fs.rs  inode_extents_list.rs  inode_index.rs  read_buffer.rs  write_inode_data.rs
storage/src/fs/cocoonfs/alloc_bitmap/: bitmap.rs  file.rs
storage/src/fs/cocoonfs/journal/: auth_tree_updates.rs  replay.rs
storage/src/fs/cocoonfs/transaction/: auth_tree_data_blocks_update_states.rs  journal_allocations.rs  read_missing_data.rs
utils-async/src/asynchronous/: semaphore.rs
utils-common/src/: io_slices.rs
