[workspace]
resolver = "2"
members = [
	"cocoonfs-cli",
	"crypto",
	"bssl-bare-sys",
	"ossl-bare-sys",
	"bssl-bare-sys-target-integration",
	"storage",
	"tpm2-interface",
	"utils-async",
	"utils-common",
]

[patch.crates-io]
cocoon-tpm-bssl-bare-sys = { path = "bssl-bare-sys" }
cocoon-tpm-bssl-bare-sys-target-integration = { path = "bssl-bare-sys-target-integration" }
cocoon-tpm-crypto = { path = "crypto" }
cocoon-tpm-storage = { path = "storage" }
cocoon-tpm-tpm2-interface = { path = "tpm2-interface" }
cocoon-tpm-utils-async = { path = "utils-async" }
cocoon-tpm-utils-common = { path = "utils-common" }
