[package]
name = "cocoon-tpm-crypto"
version = "0.1.2"
edition = "2024"

license = "Apache-2.0"
description = "Cocoon TPM project - cryptographic primitives"
homepage = "https://github.com/coconut-svsm/cocoon-tpm"
repository = "https://github.com/coconut-svsm/cocoon-tpm"
readme = "README.md"

[lib]
doctest = false

[features]
default = [
    "enable_arch_math_asm", "enable_x86_64_rdseed", "zeroize",
    "sha256", "sha384", "sha512",
    "aes",
    "cfb", "cbc", "ofb", "ecb", "ctr",
    "ecc", "ecdh", "ecdsa",
    "ecc_nist_p224", "ecc_nist_p256", "ecc_nist_p384", "ecc_nist_p521",
]

# Use CPU instructions for basic arithmetic directly. Gives a
# significant performance gain at the cost of (fairly trivial) inline
# assembly, necessarily wrapped in unsafe{} blocks.
enable_arch_math_asm = ["cmpa/enable_arch_math_asm"]

# Enable x86_64 rdseed based random number generator implementation.
# Brings unsafe{} blocks.
enable_x86_64_rdseed = []

zeroize = [
    "dep:zeroize", "cocoon-tpm-utils-common/zeroize", "cmpa/zeroize",
    "aes?/zeroize", "camellia?/zeroize", "sm4?/zeroize",
    "cfb-mode?/zeroize", "cbc?/zeroize", "ofb?/zeroize"
]

# Replace crypto implementations written in pure Rust with
# boringssl FFI invocations.
boringssl = ["dep:cocoon-tpm-bssl-bare-sys"]

# Hashes
sha1 = ["dep:sha1", "cocoon-tpm-tpm2-interface/sha1"]
sha256 = ["dep:sha2", "cocoon-tpm-tpm2-interface/sha256"]
sha384 = ["dep:sha2", "cocoon-tpm-tpm2-interface/sha384"]
sha512 = ["dep:sha2", "cocoon-tpm-tpm2-interface/sha512"]
sha3_256 = ["dep:sha3", "cocoon-tpm-tpm2-interface/sha3_256"]
sha3_384 = ["dep:sha3", "cocoon-tpm-tpm2-interface/sha3_384"]
sha3_512 = ["dep:sha3", "cocoon-tpm-tpm2-interface/sha3_512"]
sm3_256 = ["dep:sm3", "cocoon-tpm-tpm2-interface/sm3_256"]

# Block ciphers
aes = ["dep:aes", "cocoon-tpm-tpm2-interface/aes"]
camellia = ["dep:camellia", "cocoon-tpm-tpm2-interface/camellia"]
sm4 = ["dep:sm4", "cocoon-tpm-tpm2-interface/sm4"]

# Block cipher modes
cbc = ["dep:cbc", "cocoon-tpm-tpm2-interface/cbc"]
cfb = ["dep:cfb-mode", "cocoon-tpm-tpm2-interface/cfb"]
ctr = ["cocoon-tpm-tpm2-interface/ctr"]
ecb = ["dep:ecb", "cocoon-tpm-tpm2-interface/ecb"]
ofb = ["dep:ofb", "cocoon-tpm-tpm2-interface/ofb"]

# RSA
rsa = ["cocoon-tpm-tpm2-interface/rsa"]
oaep = ["rsa"]
rsapss = ["rsa"]
rsaes = ["rsa"]
rsassa = ["rsa"]

# ECC
ecc = ["cocoon-tpm-tpm2-interface/ecc"]
ecdh = ["ecc"]
ecdsa = ["ecc"]
ecschnorr = ["ecc"]

ecc_nist_p192 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_nist_p192"]
ecc_nist_p224 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_nist_p224"]
ecc_nist_p256 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_nist_p256"]
ecc_nist_p384 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_nist_p384"]
ecc_nist_p521 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_nist_p521"]
ecc_bn_p256 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_bn_p256"]
ecc_bn_p638 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_bn_p638"]
ecc_bp_p256_r1 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_bp_p256_r1"]
ecc_bp_p384_r1 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_bp_p384_r1"]
ecc_bp_p512_r1 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_bp_p512_r1"]
ecc_sm2_p256 = ["ecc", "cocoon-tpm-tpm2-interface/ecc_sm2_p256"]

[dependencies]
cocoon-tpm-bssl-bare-sys = { version = "0.1.0", optional = true }

cocoon-tpm-utils-common = { version = "0.1.1" }
cocoon-tpm-tpm2-interface = { version = "0.1.0", default-features = false }

cmpa = { version = "0.1.0", default-features = false }
zeroize = { version = "1.8.1", optional = true, default-features = false, features= ["alloc"] }

crypto-common = { version = "0.1.6", default-features = false}

digest = { version = "0.10.6", default-features = false, features = ["subtle"] }
hmac = { version = "0.12.1", default-features = false }

sha1 = { version = "0.10.5", optional = true, default-features = false }
sha2 = { version = "0.10.6", optional = true, default-features = false }
sha3 = { version = "0.10.8", optional = true, default-features = false }
sm3 = { version = "0.4.1", optional = true, default-features = false }

# Needed by the "hmac" dependency, include it here to enable the
# "core_hint_black_box" feature.
subtle = { version = "2.5.0", default-features = false, features = ["core_hint_black_box"] }

aes = { version = "0.8.2", optional = true, default-features = false }
camellia = { version = "0.1.0", optional = true, default-features = false }
sm4 = { version = "0.5.1", optional = true, default-features = false }

cipher = { version = "0.4.4", default-features = false }
cbc = { version = "0.1.2", optional = true, default-features = false }
cfb-mode = { version = "0.8.2", optional = true, default-features = false }
ecb = { version = "0.1.2", optional = true, default-features = false }
ofb = { version = "0.6.1", optional = true, default-features = false }

generic-array = "0.14.7"
